interlacing degeneracy support for more than 2 interlace

--- a/config.ini
+++ b/config.ini
@@ -16,4 +16,6 @@ d_range=None
 i=0
 
 [Data]
+; options for hastable_file_opeartion: use, generate, expand
+hashtable_file_operation=False
 hashtable_file = hash_table.pkl
