--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dill==0.2.7.1
-numpy==1.14.2
-ordered-set==2.0.2
-PyLaTeX==1.3.0
-scipy==1.0.1
-decmath==0.4.0
+dill>=0.2.7.1
+numpy>=1.11.1
+ordered-set>=2.0.2
+PyLaTeX>=1.3.0
+scipy>=1.0.1
+decmath>=0.4.0
