LHS is changed to be implemented as an external class in lhs_evaluators added 'old_csv_to_pdf' which converts results of old format (ulcd) to a pdf

--- a/config.ini
+++ b/config.ini
@@ -9,10 +9,8 @@ b_interlace=1
 print_surprising_nonexp_contfracs=False
 a_coeffs_range=None
 b_coeffs_range=None
-u_range=None
-l_range=None
-c_range=None
-d_range=None
+lhs_type=ulcd
+lhs_params=[3, 3, 3, 3]
 i=0
 
 ; options for hastable_file_opeartion: use, generate, expand
