--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,9 @@ b_coeffs_range=None
 ;lhs_type=ulcd
 ;lhs_params=[3, 3, 3, 3]
 lhs_type=rationalfunc
-lhs_params=[[[0, 3], [0, 3], [0, 3]], [[0, 3], [0, 3], [0, 3]]]
-i=0
+lhs_params=[[[0, 7], [0, 7], [0, 7]], [[0, 7], [0, 7], [0, 7]]]
+postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda x: safe_inverse(x**2)", "safe_sqrt", "lambda x: safe_inverse(safe_sqrt(x))"]
+;;; i=0
 
 ; options for hastable_file_opeartion: use, generate, expand
 hashtable_file_operation=use
