--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,22 @@
 [Setup]
-poly_coeffs_range = 3
-ulcd_range = 3
-const = e
+poly_coeffs_range=3
+ulcd_range=3
+const=zeta
+ab_polys_type=indexed
 a_poly_size=3
 b_poly_size=3
 a_interlace=1
 b_interlace=1
 print_surprising_nonexp_contfracs=False
-a_coeffs_range=None
-b_coeffs_range=None
+a_coeffs_range=[[[0, 3], [0, 3], [0, 3]]]
+b_coeffs_range=[[[0, 3], [0, 3], [0, 3]]]
 ;lhs_type=ulcd
 ;lhs_params=[3, 3, 3, 3]
 lhs_type=rationalfunc
 lhs_params=[[[0, 7], [0, 7], [0, 7]], [[0, 7], [0, 7], [0, 7]]]
 postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda x: safe_inverse(x**2)", "safe_sqrt", "lambda x: safe_inverse(safe_sqrt(x))"]
-;;; i=0
+i=3
 
 ; options for hastable_file_opeartion: use, generate, expand
-hashtable_file_operation=use
-hashtable_file = hash_table.pkl
+hashtable_file_operation=generate
+hashtable_file = hash_table_test_zeta3.pkl
