--- a/config.ini
+++ b/config.ini
@@ -2,21 +2,25 @@
 poly_coeffs_range=3
 ulcd_range=3
 const=zeta
-ab_polys_type=indexed
-a_poly_size=3
-b_poly_size=3
+ab_polys_type=normal
+a_poly_size=6
+b_poly_size=6
 a_interlace=1
 b_interlace=1
 print_surprising_nonexp_contfracs=False
-a_coeffs_range=[[[0, 3], [0, 3], [0, 3]]]
-b_coeffs_range=[[[0, 3], [0, 3], [0, 3]]]
+a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+;a_coeffs_range=[[[0, 2], [0, 2], [0, 2], [0, 2]]]
+;b_coeffs_range=[[[0, 2], [0, 2], [0, 2], [0, 2]]]
 ;lhs_type=ulcd
 ;lhs_params=[3, 3, 3, 3]
 lhs_type=rationalfunc
 lhs_params=[[[0, 7], [0, 7], [0, 7]], [[0, 7], [0, 7], [0, 7]]]
+;lhs_params=[[[0, 2], [0, 2], [0, 2]], [[0, 2], [0, 2], [0, 2]]]
 postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda x: safe_inverse(x**2)", "safe_sqrt", "lambda x: safe_inverse(safe_sqrt(x))"]
 i=3
 
 ; options for hastable_file_opeartion: use, generate, expand
-hashtable_file_operation=generate
-hashtable_file = hash_table_test_zeta3.pkl
+hashtable_file_operation=expand
+hashtable_file = hash_table_test_delme.pkl
+;hashtable_file = hash_table.pkl
