* Critical bug fix: postproc_funcs_filtered wasn't passed, hence wasn't used, and no hashtable key was generated nor updated. It works now. * added distribute_run and join_hashtables code files for parallelization

--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,11 @@ b_poly_size=6
 a_interlace=1
 b_interlace=1
 print_surprising_nonexp_contfracs=False
-a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
-b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
-;a_coeffs_range=[[[0, 2], [0, 2], [0, 2], [0, 2]]]
-;b_coeffs_range=[[[0, 2], [0, 2], [0, 2], [0, 2]]]
+gen_hashtable_only=true
+;a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+;b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+a_coeffs_range=[[[2, 4], [0, 2], [0, 1], [0, 1]]]
+b_coeffs_range=[[[2, 4], [0, 2], [0, 1], [0, 1]]]
 ;lhs_type=ulcd
 ;lhs_params=[3, 3, 3, 3]
 lhs_type=rationalfunc
@@ -21,6 +22,6 @@ postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda 
 i=3
 
 ; options for hastable_file_opeartion: use, generate, expand
-hashtable_file_operation=expand
+hashtable_file_operation=generate
 hashtable_file = hash_table_test_delme.pkl
 ;hashtable_file = hash_table.pkl
