* Minor bugfix at distribute_run

--- a/config.ini
+++ b/config.ini
@@ -9,10 +9,10 @@ a_interlace=1
 b_interlace=1
 print_surprising_nonexp_contfracs=False
 gen_hashtable_only=true
-;a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
-;b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
-a_coeffs_range=[[[2, 4], [0, 2], [0, 1], [0, 1]]]
-b_coeffs_range=[[[2, 4], [0, 2], [0, 1], [0, 1]]]
+a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+;a_coeffs_range=[[[2, 4], [0, 2], [0, 1], [0, 1]]]
+;b_coeffs_range=[[[2, 4], [0, 2], [0, 1], [0, 1]]]
 ;lhs_type=ulcd
 ;lhs_params=[3, 3, 3, 3]
 lhs_type=rationalfunc
