Documentation to the config file was added

--- a/config.ini
+++ b/config.ini
@@ -30,4 +30,4 @@ i=3 ; for some constants we have an index telling which one (constants with no i
 ; use will load the v_latest and use it (no generation of hash table)
 hashtable_file_operation=generate
 hashtable_file = hashtable_e_to_join.pkl ; file name without the v_number part
-;hashtable_file = hash_table.pkl
+;hashtable_file = hash_table.pkl;
