Partial work - just for syncing

--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ b_interlace=1
 ; printing slow convergence cases that we thought should be fast (can be identified by the discriminant)
 print_surprising_nonexp_contfracs=False
 ; just for hashtable - not looking for clicks
-gen_hashtable_only=true
+gen_hashtable_only=truerequi
 ; for example: [[[],[]],[[],[],[]],[[],[],[],[]],[[],[]]] 4-interlace with degrees of 2,3,4,2 . [a b] means running on coefficients between a to b-1
 ;a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
 ;b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
