--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dill>=0.2.7.1
-numpy>=1.11.1
-ordered-set>=2.0.2
-PyLaTeX>=1.3.0
-scipy>=1.0.1
-decmath>=0.4.0
-python-flint>=0.1.3
+DecMath==0.4.0
+dill==0.2.8.2
+numpy==1.15.4
+ordered-set==3.1
+PyLaTeX==1.3.0
+pyreadline==2.1
+scipy==1.1.0
