A wide clearance: delete legacy code, parameters, config parameters rename of files, classes, methods documentation added some minor bug fixes
todo:
finish basic_enum_params clearance, continue to lhs_evaluators, enum_params and main.

--- a/config.ini
+++ b/config.ini
@@ -1,25 +1,16 @@
 [Setup]
-; redundant
-poly_coeffs_range=3
-; redundant
-ulcd_range=3
 ; the target constant
 const=e
-; normal is a_n = A0+A1*n+A2*n^2+A3*n^3+...Ak*n^k    indexed is A0*n^k+A1*(n-1)^k+A2*(n-2)^k+A3*(n-3)^k+...+Ak*(n-k)^k
+; normal is a_n = A0+A1*n+A2*n^2+A3*n^3+...Ak*n^k
+; indexed is A0*n^k+A1*(n-1)^k+A2*(n-2)^k+A3*(n-3)^k+...+Ak*(n-k)^k
+; sparse is ...
 ab_polys_type=normal
-; redundant
-a_poly_size=6
-; redundant
-b_poly_size=6
-; redundant
-a_interlace=1
-; redundant
-b_interlace=1
 ; printing slow convergence cases that we thought should be fast (can be identified by the discriminant)
 print_surprising_nonexp_contfracs=False
-; just for hashtable - not looking for clicks
-gen_hashtable_only=truerequi
-; for example: [[[],[]],[[],[],[]],[[],[],[],[]],[[],[]]] 4-interlace with degrees of 2,3,4,2 . [a b] means running on coefficients between a to b-1
+; run just for a hashtable generation - not looking for clicks
+gen_hashtable_only=true
+; for example: [ [[], []], [[], [], []], [[], [], [], []], [[], []] ] is a 4-interlace with degrees of 2,3,4,2.
+;              [m n] means running on coefficients between m to n-1
 ;a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
 ;b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
 a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
