Cleaned, documented, parts rewritten, some improvments are introduced. Running, but no results are returned. No tests yet.

--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,22 @@
 [Setup]
 ; the target constant
-const=e
+const=pi
 ; normal is a_n = A0+A1*n+A2*n^2+A3*n^3+...Ak*n^k
 ; indexed is A0*n^k+A1*(n-1)^k+A2*(n-2)^k+A3*(n-3)^k+...+Ak*(n-k)^k
 ; sparse is ...
 ab_polys_type=normal
 ; printing slow convergence cases that we thought should be fast (can be identified by the discriminant)
 print_surprising_nonexp_contfracs=False
-; run just for a hashtable generation - not looking for clicks
-gen_hashtable_only=true
+; run just for a hashtable generation - not looking for clicks. Options: 'true', 'false', 'auto'.
+; if 'auto' - translated to True if hashtable_file_operation is 'generate'/'expand', False if it's 'use'
+gen_hashtable_only=auto
+
 ; for example: [ [[], []], [[], [], []], [[], [], [], []], [[], []] ] is a 4-interlace with degrees of 2,3,4,2.
 ;              [m n] means running on coefficients between m to n-1
 ;a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
 ;b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
-a_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
-b_coeffs_range=[[[0, 4], [0, 4], [0, 4], [0, 4], [0, 4]]]
+a_coeffs_range=[[[-4, 4], [-4, 4], [-4, 4]]]
+b_coeffs_range=[[[-4, 4], [-4, 4], [-4, 4]]]
 
 ;lhs_params=[3, 3, 3, 3]
 ; constant number of iterations. probably enough for the exponential converging cases. problematic for when the discriminant is <=0 (that may create false entries in the hashtables that will be filtered after clicks)
@@ -25,7 +27,8 @@ hashtable_precision=15
 ; the ratio of polynoms on the left hand side
 lhs_type=rationalfunc
 ; same parsing as the ab polynomials although here there is no need for interlacing
-lhs_params=[[[0, 7], [0, 7], [0, 7]], [[0, 7], [0, 7], [0, 7]]]
+;lhs_params=[[[0, 7], [0, 7], [0, 7]], [[0, 7], [0, 7], [0, 7]]]
+lhs_params=[[[-3, 3], [-3, 3], [-3, 3]], [[-3, 3], [-3, 3], [-3, 3]]]
 ;lhs_params=[[[0, 2], [0, 2], [0, 2]], [[0, 2], [0, 2], [0, 2]]]
 ; the subgroup of postprocessing functions
 postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda x: safe_inverse(x**2)", "safe_sqrt", "lambda x: safe_inverse(safe_sqrt(x))"]
@@ -36,7 +39,7 @@ i=3
 ; generate will create a new file even if using an existing name (v2, v3,...)
 ; expand will first load the most updated file (v_latest) and then add the new entries and save to v_latest+1
 ; use will load the v_latest and use it (no generation of hash table)
-hashtable_file_operation=generate
+hashtable_file_operation=use
 ; file name without the v_number part
 hashtable_file = hashtable_e_to_join.pkl
 ;hashtable_file = hash_table.pkl;
