--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 DecMath==0.4.0
 dill==0.2.8.2
+mpmath==1.1.0
 numpy==1.15.4
 ordered-set==3.1
+progressbar2==3.39.2
 PyLaTeX==1.3.0
 pyreadline==2.1
+python-utils==2.3.0
 scipy==1.1.0
+six==1.12.0
+sympy==1.3
