--- a/tests/fixtures/pi_sanitycheck_config.ini
+++ b/tests/fixtures/pi_sanitycheck_config.ini
@@ -6,7 +6,7 @@ i=3
 
 ; normal is a_n = A0+A1*n+A2*n^2+A3*n^3+...Ak*n^k
 ; indexed is A0*n^k+A1*(n-1)^k+A2*(n-2)^k+A3*(n-3)^k+...+Ak*(n-k)^k
-; sparse is
+; sparse is sparse polynomials. See below.
 ab_polys_type=normal
 ; special parameters, required by some of the a,b polynomials types:
 ;     sparse: [n_a, n_b] - the maximal degree of a/b. For either a or b, all interlaces must be of the same degree. Then
@@ -40,7 +40,7 @@ lhs_params=[[0, 1], [4, 5], [0, 1], [1, 2]]
 ; same parsing as the ab polynomials, with the interalce being replaced by: p, q, force_bigger_numerator = lhs_params
 ; if force_bigger_numerator is True, only p,q with deg(p) >= deg(q) are evaluated. This is useful to save runtime if a
 ; 'safe_inverse' postproc-function is applied, and if the p,q ranges are symmetric
-;lhs_params=[[[-3, 3], [-3, 3], [-3, 3]], [[-3, 3], [-3, 3], [-3, 3]]]
+;lhs_params=[[[-3, 3], [-3, 3], [-3, 3]], [[-3, 3], [-3, 3], [-3, 3]], true]
 ; the subgroup of postprocessing functions
 postproc_funcs_filter=["lambda x: x", "safe_inverse", "lambda x: x**2", "lambda x: safe_inverse(x**2)", "safe_sqrt", "lambda x: safe_inverse(safe_sqrt(x))"]
 
