* Drastic performance enhance for finding clicks. * A file to fix hashtables there were created with b polynomials with integer roots. * Mild performance enhance for is_equiv and canonalize_params for rationalfunc LHS

--- a/config_apery.ini
+++ b/config_apery.ini
@@ -18,6 +18,7 @@ ab_polys_special_params=[5, 7]
 ; a, b contfrac polynomials range of enumeration.
 ; For example: [ [[], []], [[], [], []], [[], [], [], []], [[], []] ] is a 4-interlace with degrees of 2,3,4,2.
 ;              [m n] means running on coefficients between m to n-1
+;; +16.3 bits
 a_coeffs_range=[[[0, 5], [0, 5], [0, 5], [0, 5]]]
 b_coeffs_range=[[ [-3, 4], [-3, 4]]]
 
@@ -25,24 +26,45 @@ b_coeffs_range=[[ [-3, 4], [-3, 4]]]
 ; if 'auto' - translated to True if hashtable_file_operation is 'generate'/'expand', False if it's 'use'
 gen_hashtable_only=false
 
-; constant number of iterations. probably enough for the exponential converging cases.
-; problematic for when the discriminant is <=0 (that may create false entries in the hashtables that will be
+; constant number of iterations for contfracs when building the hashtable.
+; probably enough for the exponential converging cases. problematic for when the discriminant is <=0
+; (that may create false entries in the hashtables that will be
 ; filtered after clicks)
 hashtable_num_of_iterations=200
 ; number of digits saved in the hashtable
+;; 8 = -26.6 bits
 hashtable_precision=8
+; constant number of iterations for contfracs at the first filtering round of refining clicks results.
+first_filtering_num_of_iterations=1000
+; number of digits to compare at the first filterting
+;; 10 = -33.2 bits , 12 = 39.9 bits
+first_filtering_precision=12
+; required precision for the second filtering round. This filtering is done with a fitting number of iterations, after
+; estimating the speed of approach, with a 'max_precision' upper boundary.
+;; 13 = -43.2 bits
+second_filtering_max_num_of_iterations=1200
+second_filtering_precision=15
+; similarly, for the third filtering round.
+;; 16 = -53.15 bits, 20 = -66.43 bits
+third_filtering_max_num_of_iterations=1500
+third_filtering_precision=20
+
+
+
 
 ; type of LHS: ulcd = (u/const+const/l+c)/d  ;  rationalfunc = p(const)/q(const)
 ;lhs_type=ulcd
 ; u, l, c, d = lhs_params
 ;lhs_params=[[1, 3], [2, 4], [3, 5], [4, 6]]
 lhs_type=rationalfunc
-; same parsing as the ab polynomials, with the interalce being replaced by: p, q, force_bigger_numerator = lhs_params
+; same parsing as the ab polynomials, with the interlace being replaced by: p, q, force_bigger_numerator = lhs_params
 ; if force_bigger_numerator is True, only p,q with deg(p) >= deg(q) are evaluated. This is useful to save runtime if a
 ; 'safe_inverse' postproc-function is applied, and if the p,q ranges are symmetric
-lhs_params=[[[-4, 4], [-4, 4], [-4, 4]], [[-4, 4], [-4, 4], [-4, 4]], true]
+;; +25 bits
+lhs_params=[[[-9, 9], [-9, 9], [-9, 9]], [[-9, 9], [-9, 9], [-9, 9]], true]
 
 ; the subgroup of postprocessing functions
+;; 6 postproc funcs = +2.6 bits
 postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda x: safe_inverse(x**2)", "safe_sqrt", "lambda x: safe_inverse(safe_sqrt(x))"]
 
 ; options for hastable_file_opeartion: use, generate, expand
@@ -51,7 +73,7 @@ postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda 
 ; use will load the v_latest and use it (no generation of hash table)
 hashtable_file_operation=use
 ; file name without the v_number part
-hashtable_file = hashtable_apery.pkl
+hashtable_file=hashtable_apery.pkl
 
 ; printing slow convergence cases that we thought should be fast (can be identified by the discriminant)
 print_surprising_nonexp_contfracs=False
