--- a/tests/fixtures/pi_sanitycheck_config.ini
+++ b/tests/fixtures/pi_sanitycheck_config.ini
@@ -25,12 +25,28 @@ b_coeffs_range=[[[0, 1], [0, 1], [1, 2]]]
 ; if 'auto' - translated to True if hashtable_file_operation is 'generate'/'expand', False if it's 'use'
 gen_hashtable_only=false
 
-; constant number of iterations. probably enough for the exponential converging cases.
-; problematic for when the discriminant is <=0 (that may create false entries in the hashtables that will be
+; constant number of iterations for contfracs when building the hashtable.
+; probably enough for the exponential converging cases. problematic for when the discriminant is <=0
+; (that may create false entries in the hashtables that will be
 ; filtered after clicks)
-hashtable_num_of_iterations=300
+hashtable_num_of_iterations=200
 ; number of digits saved in the hashtable
-hashtable_precision=15
+;; 8 = -26.6 bits
+hashtable_precision=8
+; constant number of iterations for contfracs at the first filtering round of refining clicks results.
+first_filtering_num_of_iterations=1000
+; number of digits to compare at the first filterting
+;; 10 = -33.2 bits
+first_filtering_precision=10
+; required precision for the second filtering round. This filtering is done with a fitting number of iterations, after
+; estimating the speed of approach, with a 'max_precision' upper boundary.
+;; 13 = -43.2 bits
+second_filtering_max_num_of_iterations=1200
+second_filtering_precision=13
+; similarly, for the third filtering round.
+;; 16 = -53.15 bits, 20 = -66.43 bits
+third_filtering_max_num_of_iterations=1500
+third_filtering_precision=20
 
 ; type of LHS: ulcd = (u/const+const/l+c)/d  ;  rationalfunc = p(const)/q(const)
 lhs_type=ulcd
