* Mild performance enhance for generating hashtable * Better support for expanding hashtables * support for config files, hashtables etc in different directories. * "testing" setting for automatic saving of results to a testing dir * changing the results timestamp format to YYMMDD_hhmm_constname_numofresults, so sorting will be more natural and the name more indicative.

--- a/config_apery.ini
+++ b/config_apery.ini
@@ -20,11 +20,16 @@ ab_polys_special_params=[5, 7]
 ;              [m n] means running on coefficients between m to n-1
 ;; +16.3 bits
 a_coeffs_range=[[[0, 5], [0, 5], [0, 5], [0, 5]]]
-b_coeffs_range=[[ [-3, 4], [-3, 4]]]
+b_coeffs_range=[[[-3, 4], [-3, 4]]]
 
+; validate that no entries repetition occurs (e.g. if hashtable is expanded, and some of the existing parameters are
+; re-enumerated). Actually, such double-occurences are avoided in any case, but in the case that such reoccurences are
+; expected, setting this to true can save runtime
+validate_hashtable_extend_no_replication=true
 ; run just for a hashtable generation - not looking for clicks. Options: 'true', 'false', 'auto'.
 ; if 'auto' - translated to True if hashtable_file_operation is 'generate'/'expand', False if it's 'use'
 gen_hashtable_only=false
+
 
 ; constant number of iterations for contfracs when building the hashtable.
 ; probably enough for the exponential converging cases. problematic for when the discriminant is <=0
