--- a/tests/fixtures/apery_sanitycheck_config.ini
+++ b/tests/fixtures/apery_sanitycheck_config.ini
@@ -1,4 +1,7 @@
 [Setup]
+; if is_test=true, results will be saved to tests/result/data/results
+is_test=true
+
 ; the target constant
 const=apery
 ; for some constants we have an index telling which one (like zeta(i). Constants with no index, like e and pi, ignore this)
@@ -70,7 +73,7 @@ postproc_funcs_filter=["safe_inverse", "lambda x: x", "lambda x: x**2", "lambda 
 ; use will load the v_latest and use it (no generation of hash table)
 hashtable_file_operation=generate
 ; file name without the v_number part
-hashtable_file = hashtable_apery_sanity.pkl
+hashtable_file = tests/result_data/hashtable_apery_sanity.pkl
 
 ; printing slow convergence cases that we thought should be fast (can be identified by the discriminant)
-print_surprising_nonexp_contfracs=False
+print_surprising_nonexp_contfracs=false
