* Minor bug fix in configfile.py:gen_hashtable_only * Generation of hashtables for pi/e and a search over them. Surprisingly with no results. Requires further validation why is so.

--- a/config_apery_extend_hashtable.ini
+++ b/config_apery_extend_hashtable.ini
@@ -1,12 +1,13 @@
 [Setup]
 ; the target constant
 const=apery
-; for some constants we have an index telling which one (like zeta(i). Constants with no index, like e and pi, ignore this)
+; for some constants we have an index telling which one (like zeta(i). Constants with no index, like e and pi, 
+; ignore this)
 i=3
 
 ; normal is a_n = A0+A1*n+A2*n^2+A3*n^3+...Ak*n^k
 ; indexed is A0*n^k+A1*(n-1)^k+A2*(n-2)^k+A3*(n-3)^k+...+Ak*(n-k)^k
-; sparse is ...
+; sparse is sparse polynomials. See below.
 ab_polys_type=sparse
 ; special parameters, required by some of the a,b polynomials types:
 ;     sparse: [n_a, n_b] - the maximal degree of a/b. For either a or b, all interlaces must be of the same degree. Then
@@ -23,6 +24,10 @@ ab_polys_special_params=[5, 7]
 a_coeffs_range=[[[0, 7], [7, 7], [0, 7], [5, 8]]]
 b_coeffs_range=[[ [-3, 5], [-3, 5]]]
 
+; validate that no entries repetition occurs (e.g. if hashtable is expanded, and some of the existing parameters are
+; re-enumerated). Actually, such double-occurences are avoided in any case, but in the case that such reoccurences are
+; expected, setting this to true can save runtime
+validate_hashtable_extend_no_replication=true
 ; run just for a hashtable generation - not looking for clicks. Options: 'true', 'false', 'auto'.
 ; if 'auto' - translated to True if hashtable_file_operation is 'generate'/'expand', False if it's 'use'
 gen_hashtable_only=true
